# a2l-parser-lib

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
examples/basic/: CMakeLists.txt  main.cpp
examples/json_export/: CMakeLists.txt  main.cpp
include/: a2lfile.h  extract.h
include/a2l/: a2mlenum.h  extract.h  mcdenum.h
proto/: a2l.proto  axis.proto  ccp.proto  common.proto  record_layout.proto  xcp.proto
proto/a2l/: a2l.proto  axis.proto  ccp.proto  common.proto  record_layout.proto  xcp.proto
